# pybdiff

./: .gitignore  LICENSE  README.md  pybdiff.py  pyproject.toml
.github/workflows/: publish.yml
src/pybdiff/: __init__.py  bdiff.py
